manifests/07-networking/books-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-api-service
  namespace: bookstore
  labels:
    app: books-api
spec:
  type: ClusterIP
  selector:
    app: books-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
