manifests/07-networking/order-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api-service
  namespace: bookstore
  labels:
    app: order-api
spec:
  type: ClusterIP
  selector:
    app: order-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
