manifests/07-networking/netpol-books-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: books-api-netpol
  namespace: bookstore
spec:
  podSelector:
    matchLabels:
      app: books-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
